# sklearn-pandas

./: .gitignore  .tool-versions  CONTRIBUTING.md  LICENSE  README.md  README.rst  circle.yml  nox.ini  noxfile.py  pipeline.py  pyproject.toml  pytest.ini  setup.py  test.py  test_pipeline.py  tox.ini
.circleci/: config.yml
.github/workflows/: python-publish.yml  step1_test.yml  step2_release.yml  step3_pypi_deploy.yml  step4_conda_deploy.yml  test.yml  upload_conda.yml
.pytest_cache/v/cache/: lastfailed  nodeids
conda/: conda_build_config.yml  meta.yaml
examples/: 01 Flowers and Forests - A Simple Pipeline.ipynb
sklearn_pandas/: __init__.py  act_as_transformer.py  categorical_imputer.py  cross_validation.py  dataframe_imputer.py  dataframe_mapper.py  dataframe_mapper_pipeline.py  dataframe_pipeline.py  features_generator.py  pipeline.py  transformers.py  utils.py
tests/: test_categorical_imputer.py  test_dataframe_imputer.py  test_dataframe_mapper.py  test_features_generator.py  test_pipeline.py  test_string_imputer.py  test_transformers.py  test_utils.py
